# finance_agent

./: .gitignore  Dockerfile  Dockerfile.streamlit  LICENSE.md  README.md  docker-compose.ollama.yml  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
.github/workflows/: ci.yml
evals/: run_evals.py
src/: langfuse.py  settings.py
src/agents/: fundamentals.py  news.py
src/api/: main.py
src/api/schemas/: GenerateReportRequest.py  ReviewRequest.py
src/graph/: graph.py  state.py
src/jobs/: cleanup_reports.py
src/nodes/: evaluate_report.py  fundamentals.py  news.py  prompts.py  report.py  save_report.py  supervisor.py
src/shared/: llm.py
src/streamlit_app/: app.py
src/tools/: yfinance_tools.py
