[project]
name = "finance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "langchain-ollama>=1.1.0",
    "langfuse==3.6.0",
    "langfuse-langchain==2.60.10.1",
    "langgraph>=1.2.2",
    "tavily>=1.1.0",
    "yfinance>=1.4.0",
]
