[project]
name = "finance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "langchain-ollama>=1.1.0",
    "langfuse==3.6.0",
    "langfuse-langchain==2.60.10.1",
    "langgraph>=1.2.2",
    "streamlit>=1.58.0",
    "tavily>=1.1.0",
    "yfinance>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
    "pytest-asyncio>=0.24.0",
]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
